--- a/INSTALL
+++ b/INSTALL
@@ -24,4 +24,4 @@ Lingua::JA::NormalizeText documentation is available as in POD. So you can do:
 
 to read the documentation online with your favorite pager.
 
-pawa-
+pawa
