updated to Ver.0.01

--- a/Changes
+++ b/Changes
@@ -1,2 +1,4 @@
 Revision history for Perl extension Lingua::JA::NormalizeText
 
+0.01    Mon, 11 Jun 2012 01:25:11 +0900
+        - original version
