updated to Ver.0.02

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Lingua::JA::NormalizeText
 
+0.02    Mon, 11 Jun 2012 20:57:51 +0900
+        - changed dependency on Lingua::JA::Regular::Unicode from 0.04 to 0.09
+
 0.01    Mon, 11 Jun 2012 01:25:11 +0900
         - original version
