updated to Ver.0.03 again

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Lingua::JA::NormalizeText
 
 0.03    Tue, 12 Jun 2012 23:07:46 +0900
         - speed optimization
+        - improved nl2space option
 
 0.02    Mon, 11 Jun 2012 20:57:51 +0900
         - changed dependency on Lingua::JA::Regular::Unicode from 0.04 to 0.09
