--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 NAME
-    Lingua::JA::NormalizeText - text normalizer
+    Lingua::JA::NormalizeText - Text Normalizer
 
 SYNOPSIS
       use Lingua::JA::NormalizeText;
@@ -71,13 +71,22 @@ METHODS
       remove_tail_space      ああ(space)(space)  ああ
       old2new_kana           ゐヰゑヱ            いイえエ
       old2new_kanji          亞逸鬭              亜逸闘
+      tab2space              (tab)(tab)          (space)(space)
+      remove_controls        あ\x{0000}あ        ああ
 
-    The order these options are applied is according to the order of the
-    elements of @options. (i.e., The first element is applied first, and the
-    last element is applied last.)
+    The order in which these options are applied is according to the order
+    of the elements of @options. (i.e., The first element is applied first,
+    and the last element is applied last.)
 
     External functions are also addable. (See dearinsu_to_desu function of
     SYNOPSIS section.)
+
+   remove_controls
+    Note that this option does not remove the following chars:
+
+      CHARACTER TABULATION(tab)
+      LINE FEED(LF)
+      CARRIAGE RETURN(CR)
 
   normalize($text)
     normalizes $text.
@@ -86,7 +95,7 @@ AUTHOR
     pawa <pawapawa@cpan.org>
 
 SEE ALSO
-    <http://www.asahi-net.or.jp/~ax2s-kmtn/ref/old_chara.html>
+    新旧字体表: <http://www.asahi-net.or.jp/~ax2s-kmtn/ref/old_chara.html>
 
 LICENSE
     This library is free software; you can redistribute it and/or modify it
