--- a/README
+++ b/README
@@ -35,7 +35,7 @@ METHODS
   new(@options)
     Creates a new Lingua::JA::NormalizeText instance.
 
-    The following options are available.
+    The following options are available:
 
       OPTION                 SAMPLE INPUT        OUTPUT FOR SAMPLE INPUT
       ---------------------  ------------------  -----------------------
@@ -55,7 +55,7 @@ METHODS
       katakana_h2z           ｽｰﾊｰｽｰﾊｰ            スーハースーハー
       katakana2hiragana      パンツ              ぱんつ
       hiragana2katakana      ぱんつ              パンツ
-      unify_3dots            はぁ。。。          はぁ…
+      unify_3dots            はぁ。。。          はぁ……
       wave2tilde             〜                  ～
       tilde2wave             ～                  〜
       wavetilde2long         〜, ～              ー
@@ -67,9 +67,10 @@ METHODS
       unify_long_repeats     ヴァーーー          ヴァー
       nl2space               (new line)          (space)
       unify_long_spaces      (space)(space)      (space)
-      remove_head_space      (space)あ(space)あ  あ(space)あ
-      remove_tail_space      ああ(space)(space)  ああ
-      old2new_kana           ゐヰゑヱ            いイえエ
+      trim                   (space)あ(space)    あ
+      ltrim                  (space)あ(space)    あ(space)
+      rtrim                  ああ(space)(space)  ああ
+      old2new_kana           ゐヰゑヱヸヹ        いイえエイ゙エ゙
       old2new_kanji          亞逸鬭              亜逸闘
       tab2space              (tab)(tab)          (space)(space)
       remove_controls        あ\x{0000}あ        ああ
@@ -79,14 +80,24 @@ METHODS
     and the last element is applied last.)
 
     External functions are also addable. (See dearinsu_to_desu function of
-    SYNOPSIS section.)
+    the SYNOPSIS section.)
+
+   dashed2long
+    Note that this option does not convert hyphens into long.
+
+   unify_long_spaces
+    Note that this option unifies only SPACE(\x{0020}) and IDEOGRAPHIC
+    SPACE(\x{3000}).
 
    remove_controls
     Note that this option does not remove the following chars:
 
-      CHARACTER TABULATION(tab)
+      CHARACTER TABULATION(horizontal tabulation)
       LINE FEED(LF)
       CARRIAGE RETURN(CR)
+
+   unify_3dots
+    Note that this option is EXPERIMENTAL.
 
   normalize($text)
     normalizes $text.
@@ -96,6 +107,16 @@ AUTHOR
 
 SEE ALSO
     新旧字体表: <http://www.asahi-net.or.jp/~ax2s-kmtn/ref/old_chara.html>
+
+    Lingua::JA::Regular::Unicode
+
+    Lingua::JA::Moji
+
+    Unicode::Normalize
+
+    HTML::Entities
+
+    HTML::Scrubber
 
 LICENSE
     This library is free software; you can redistribute it and/or modify it
