--- a/README
+++ b/README
@@ -21,12 +21,11 @@ SYNOPSIS
 
     # or
 
-      use Lingua::JA::NormalizeText qw/nfkc decode_entities/;
+      use Lingua::JA::NormalizeText qw/old2new_kanji/;
       use utf8;
 
-      my $text = '㈱㋰㋫㋫&hearts;';
-      print decode_entities( nfkc($text) );
-      # -> (株)ムフフ♥
+      print old2new_kanji('惡の華');
+      # -> 悪の華
 
 DESCRIPTION
     Lingua::JA::NormalizeText normalizes text.
