--- a/README
+++ b/README
@@ -93,6 +93,10 @@ OPTIONS
   dashes2long
     Note that this option does not convert hyphens into long.
 
+  drawing_line2long
+    This option converts drawing lines which are similar to long(U+30FC) in
+    appearance.
+
   unify_long_spaces
     Note that this option unifies only SPACE(U+0020) and IDEOGRAPHIC
     SPACE(U+3000).
