--- a/README
+++ b/README
@@ -59,7 +59,7 @@ METHODS
       wavetilde2long         〜, 〰, ～             ー
       wave2long              〜, 〰                 ー
       tilde2long             ～                     ー
-      fullminus2long         −                      ー
+      fullminus2long         －                     ー
       dashes2long            —                      ー
       drawing_lines2long     ─                      ー
       unify_long_repeats     ヴァーーー             ヴァー
