--- a/README
+++ b/README
@@ -39,9 +39,9 @@ METHODS
       lc                     DdD                    ddd
       uc                     DdD                    DDD
       nfkc                   ｶﾞ                     ガ (U+30AC)
-      nfkd                   ｶﾞ                     ガ (U+30AB. U+30A9)
+      nfkd                   ｶﾞ                     ガ (U+30AB. U+3099)
       nfc                    ド                     ド (U+30C9)
-      nfd                    ド                     ト (U+30C8, U+3099)
+      nfd                    ド                     ド (U+30C8, U+3099)
       decode_entities        &hearts;               ♥
       strip_html             <em>あ</em>                あ    
       alnum_z2h              ＡＢＣ１２３           ABC123
@@ -200,7 +200,7 @@ OPTIONS
     Unifies long (U+30FC) repeats.
 
   nl2space
-    Converts new lines (LF, CR, CRLF) to SPACE (U+0020).
+    Converts new lines (LF, CR, CRLF) into SPACE (U+0020).
 
   unify_nl
     Unifies new lines.
@@ -209,7 +209,7 @@ OPTIONS
     Unifies long spaces (U+0020 and U+3000).
 
   unify_whitespaces
-    This option converts the following characters into SPACE (U+0020).
+    Converts the following characters into SPACE (U+0020).
 
       U+000B  LINE TABULATION
       U+000C  FORM FEED
@@ -233,7 +233,7 @@ OPTIONS
       U+202F  NARROW NO-BREAK SPACE
       U+205F  MEDIUM MATHEMATICAL SPACE
 
-    Note that this does not convert the following characters:
+    Note that this option does not convert the following characters:
 
       U+0009  CHARACTER TABULATION
       U+000A  LINE FEED
@@ -291,6 +291,9 @@ OPTIONS
       福払仏併塀並変辺勉弁弁弁舗歩穂宝褒豊墨没翻毎万満免麺黙餅戻弥
       薬訳予余与誉揺様謡来頼乱欄覧隆竜虜両猟緑塁涙類励礼隷霊齢暦歴
       恋練錬炉労廊朗楼郎録湾尭巌晋槙渚猪琢瑶祐禄禎穣聡遥
+
+  tab2space
+    Converts CHARACTER TABULATION (U+0009) into SPACE (U+0020).
 
   remove_controls
     Removes the following characters:
