--- a/README
+++ b/README
@@ -72,6 +72,7 @@ METHODS
       old2new_kanji          亞逸鬭                 亜逸闘
       tab2space              (tab)(tab)             (space)(space)
       remove_controls        あ\x{0000}あ           ああ
+      remove_DFC             \x{202E}HOGE           HOGE
       remove_spaces          \x{0020}あ\x{3000}あ\x{0020}  ああ
       dakuon_normalize       さ\x{3099}             ざ (U+3056)
       handakuon_normalize    は\x{309A}             ぱ (U+3071)
@@ -312,6 +313,25 @@ OPTIONS
       U+0009  CHARACTER TABULATION
       U+000A  LINE FEED
       U+000D  CARRIAGE RETURN
+
+  remove_DFC
+    Removes the following Directional Formatting Characters:
+
+      U+061C  ARABIC LETTER MARK
+      U+2066  LEFT-TO-RIGHT ISOLATE
+      U+2067  RIGHT-TO-LEFT ISOLATE
+      U+2068  FIRST STRONG ISOLATE
+      U+2069  POP DIRECTIONAL ISOLATE
+      U+200E  LEFT-TO-RIGHT MARK
+      U+200F  RIGHT-TO-LEFT MARK
+      U+202A  LEFT-TO-RIGHT EMBEDDING
+      U+202B  RIGHT-TO-LEFT EMBEDDING
+      U+202C  POP DIRECTIONAL FORMATTING
+      U+202D  LEFT-TO-RIGHT OVERRIDE
+      U+202E  RIGHT-TO-LEFT OVERRIDE
+
+    See <http://www.unicode.org/reports/tr9/> for more information about
+    Directional Formatting Characters.
 
   remove_spaces
     Removes SPACE (U+0020) and IDEOGRAPHIC SPACE (U+3000).
